--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 
             </header>
 
-            <main class="">
+            <main>
+                <!-- woman jsckets html  -->
                 <section class="man__jeckets container mx-auto py-12 my-12">
                     <h3 class="uppercase text-5xl">W0Man Jacket</h3>
                     <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-9">
@@ -211,10 +212,165 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </section>
+
+                <!-- man jackets html  -->
+
+                <section class="man__jeckets container mx-auto py-12 my-12">
+                    <h3 class="uppercase text-5xl">Man Jacket</h3>
+                    <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-9">
+                        <!-- man jackets card 1 -->
+                        <div>
+                            <div class="bg-slate-100 rounded-lg">
+                                <img class="p-6" src="images/jacket-4.png"
+                                    alt="">
+                            </div>
+                            <div class="space-y-2">
+                                <h3 class="text-2xl font-semibold mt-4">Snowboard Jacket Mens </h3>
+                                <p>Lorem Ipsum is simply dummy text of the
+                                    printing and typesetting industry.</p>
+                                <div class="flex justify-between items-center">
+                                    <p class="text-3xl text-price">$234</p>
+                                    <button class=" bg-gradient-to-r
+                                        from-[#A4BC46] to-[#85A019]
+                                        rounded-lg py-4 px-8 bg-black
+                                        text-white">
+                                        <svg xmlns="http://www.w3.org/2000/svg"
+                                            fill="none"
+                                            viewBox="0 0 24 24"
+                                            stroke-width="1.5"
+                                            stroke="currentColor" class="w-6 h-6
+                                            inline">
+                                            <path stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                                d="M2.25 3h1.386c.51 0 .955.343
+                                                1.087.835l.383
+                                                1.437M7.5 14.25a3 3 0 00-3
+                                                3h15.75m-12.75-3h11.218c1.121-2.3
+                                                2.1-4.684
+                                                2.924-7.138a60.114 60.114 0
+                                                00-16.536-1.84M7.5
+                                                14.25L5.106 5.272M6 20.25a.75.75
+                                                0 11-1.5 0
+                                                .75.75 0 011.5 0zm12.75 0a.75.75
+                                                0 11-1.5 0
+                                                .75.75 0 011.5 0z" />
+                                            </svg>
+
+                                            BUY NOW</button>
+                                    </div>
+                                </div>
+                            </div>
+                      
+                        <!-- man jackets card 2 -->
+                        <div>
+                            <div class="bg-slate-100 rounded-lg">
+                                <img class="p-6" src="images/jacket-5.png"
+                                    alt="">
+                            </div>
+                            <div class="space-y-2">
+                                <h3 class="text-2xl font-semibold mt-4">Man Leather Jackets</h3>
+                                <p>Lorem Ipsum is simply dummy text of the
+                                    printing and typesetting industry.</p>
+                                <div class="flex justify-between
+                                    items-center">
+                                    <p class="text-3xl text-price">$234</p>
+                                    <button class=" bg-gradient-to-r
+                                        from-[#A4BC46] to-[#85A019]
+                                        rounded-lg py-4 px-8 bg-black
+                                        text-white">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            fill="none"
+                                            viewBox="0 0 24 24"
+                                            stroke-width="1.5"
+                                            stroke="currentColor" class="w-6
+                                            h-6
+                                            inline">
+                                            <path stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                                d="M2.25 3h1.386c.51 0
+                                                .955.343
+                                                1.087.835l.383
+                                                1.437M7.5 14.25a3 3 0 00-3
+                                                3h15.75m-12.75-3h11.218c1.121-2.3
+                                                2.1-4.684
+                                                2.924-7.138a60.114 60.114 0
+                                                00-16.536-1.84M7.5
+                                                14.25L5.106 5.272M6
+                                                20.25a.75.75
+                                                0 11-1.5 0
+                                                .75.75 0 011.5 0zm12.75
+                                                0a.75.75
+                                                0 11-1.5 0
+                                                .75.75 0 011.5 0z" />
+                                            </svg>
+
+                                            BUY NOW</button>
+                                    </div>
+                                </div>
+                            </div>
+                     
+
+                        <!-- waman jackets card 3 -->
+                        <div>
+                            <div class="bg-slate-100 rounded-lg">
+                                <img class="p-6"
+                                    src="images/jacket-6.png" alt="">
+                            </div>
+                            <div class="space-y-2">
+                                <h3 class="text-2xl font-semibold mt-4">Man Casual Jackets</h3>
+                                <p>Lorem Ipsum is simply dummy text of
+                                    the
+                                    printing and typesetting industry.</p>
+                                <div class="flex justify-between
+                                    items-center">
+                                    <p class="text-3xl text-price">$234</p>
+                                    <button class=" bg-gradient-to-r
+                                        from-[#A4BC46] to-[#85A019]
+                                        rounded-lg py-4 px-8 bg-black
+                                        text-white">
+                                        <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            fill="none"
+                                            viewBox="0 0 24 24"
+                                            stroke-width="1.5"
+                                            stroke="currentColor"
+                                            class="w-6 h-6
+                                            inline">
+                                            <path stroke-linecap="round"
+                                                stroke-linejoin="round"
+                                                d="M2.25 3h1.386c.51 0
+                                                .955.343
+                                                1.087.835l.383
+                                                1.437M7.5 14.25a3 3 0
+                                                00-3
+                                                3h15.75m-12.75-3h11.218c1.121-2.3
+                                                2.1-4.684
+                                                2.924-7.138a60.114
+                                                60.114 0
+                                                00-16.536-1.84M7.5
+                                                14.25L5.106 5.272M6
+                                                20.25a.75.75
+                                                0 11-1.5 0
+                                                .75.75 0 011.5 0zm12.75
+                                                0a.75.75
+                                                0 11-1.5 0
+                                                .75.75 0 011.5 0z" />
+                                            </svg>
+
+                                            BUY NOW</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
 
                     </div>
                 </section>
+
+
             </main>
 
         </body>
